# cmd/api/main.go
@@ -13,14 +13,17 @@ import (
 //	@title			Echo Engine API
 //	@version		1.0
 //	@description	This is an Echo API Server template.
-//	@termsOfService	http://swagger.io/terms/
 
-//	@contact.name	API Support
-//	@contact.url	http://www.swagger.io/support
-//	@contact.email	support@swagger.io
+//	@contact.name	Andrew Sameh
+//	@contact.url	https://andrewsam.xyz
+//	@contact.email	g.andrewsameh@gmail.com
 
-//	@license.name	Apache 2.0
-//	@license.url	http://www.apache.org/licenses/LICENSE-2.0.html
+//	@license.name	MIT
+//	@license.url	https://opensource.org/license/mit
+
+//	@securityDefinitions.apiKey ApiKeyAuth
+//	@in							header
+//	@name						Authorization
 
 // @BasePath	/api/v1
 func main() {
