# internal/database/db/models.go
@@ -5,8 +5,56 @@
 package database
 
 import (
+	"database/sql/driver"
+	"fmt"
+
 	"github.com/jackc/pgx/v5/pgtype"
 )
+
+type UserRole string
+
+const (
+	UserRoleAdmin    UserRole = "admin"
+	UserRoleUser     UserRole = "user"
+	UserRoleOwner    UserRole = "owner"
+	UserRoleManager  UserRole = "manager"
+	UserRoleReadOnly UserRole = "read_only"
+)
+
+func (e *UserRole) Scan(src interface{}) error {
+	switch s := src.(type) {
+	case []byte:
+		*e = UserRole(s)
+	case string:
+		*e = UserRole(s)
+	default:
+		return fmt.Errorf("unsupported scan type for UserRole: %T", src)
+	}
+	return nil
+}
+
+type NullUserRole struct {
+	UserRole UserRole
+	Valid    bool // Valid is true if UserRole is not NULL
+}
+
+// Scan implements the Scanner interface.
+func (ns *NullUserRole) Scan(value interface{}) error {
+	if value == nil {
+		ns.UserRole, ns.Valid = "", false
+		return nil
+	}
+	ns.Valid = true
+	return ns.UserRole.Scan(value)
+}
+
+// Value implements the driver Valuer interface.
+func (ns NullUserRole) Value() (driver.Value, error) {
+	if !ns.Valid {
+		return nil, nil
+	}
+	return string(ns.UserRole), nil
+}
 
 type User struct {
 	ID           int64
@@ -14,4 +62,10 @@ type User struct {
 	Email        string
 	PasswordHash string
 	CreatedAt    pgtype.Timestamp
+	FirstName    string
+	LastName     string
+	Role         UserRole
+	UpdatedAt    pgtype.Timestamp
+	DeletedAt    pgtype.Timestamp
+	IsSuperuser  bool
 }
