# internal/server/handlers/generic_handlers.go
@@ -33,26 +33,6 @@ func (g *GenericHandler) HelloWorldHandler(c echo.Context) error {
 	return c.JSON(http.StatusOK, resp)
 }
 
-// ListUsersHandler lists all existing users
-//
-//	@Summary		List users
-//	@Description	get users
-//	@Tags			Generic
-//	@Accept			json
-//	@Produce		json
-//	@Success		200	{array} []map[string]string
-//	@Failure		500	{object} error
-//	@Router			/users [get]
-func (g *GenericHandler) ListUsersHandler(c echo.Context) error {
-	queries := g.server.DB.Queries()
-	users, err := queries.GetAllUsers(c.Request().Context())
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError, map[string]string{"error": err.Error()})
-	}
-
-	return c.JSON(http.StatusOK, users)
-}
-
 // healthHandler checks the health of the server
 //
 //	@Summary		Health check
