# internal/server/routes/routes.go
@@ -6,9 +6,11 @@ import (
 	_ "github.com/andrew-sameh/echo-engine/docs"
 	s "github.com/andrew-sameh/echo-engine/internal/server"
 	h "github.com/andrew-sameh/echo-engine/internal/server/handlers"
+	"github.com/andrew-sameh/echo-engine/internal/services/token"
 	"github.com/brpaz/echozap"
-
-	// "github.com/labstack/echo/v4"
+	"github.com/golang-jwt/jwt/v5"
+	echojwt "github.com/labstack/echo-jwt/v4"
+	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 	echoSwagger "github.com/swaggo/echo-swagger"
 	"go.uber.org/zap"
@@ -24,6 +26,8 @@ func RegisterRoutes(s *s.Server) {
 
 	// Handlers creation
 	genericHandler := h.NewGenericHandler(s)
+	authHandler := h.NewAuthHandler(s)
+	userHandler := h.NewUserHandler(s)
 
 	// Middlewares
 	s.Echo.Use(middleware.RequestID())
@@ -44,6 +48,22 @@ func RegisterRoutes(s *s.Server) {
 
 	base.GET("/", genericHandler.HelloWorldHandler)
 	base.GET("/health", genericHandler.HealthHandler)
-	base.GET("/users", genericHandler.ListUsersHandler)
+
+	auth := base.Group("/auth")
+	auth.POST("/login", authHandler.Login)
+	auth.POST("/register", authHandler.Register)
+	auth.POST("/refresh", authHandler.RefreshToken)
+
+	r := base.Group("")
+	// Configure middleware with the custom claims type
+	config := echojwt.Config{
+		NewClaimsFunc: func(_ echo.Context) jwt.Claims {
+			return new(token.JwtCustomClaims)
+		},
+		SigningKey: []byte(s.Config.Auth.AccessSecret),
+	}
+	r.Use(echojwt.WithConfig(config))
+	r.GET("/profile", userHandler.GetMyUserHandler)
+	r.GET("/users", userHandler.ListUsersHandler)
 
 }
